--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CPrimerPlus C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(CPrimerPlus Ch7/exercises/8.c )
+add_executable(CPrimerPlus Ch11/fgets3.c )
